fix layout issues for mobile

--- a/src/styles/components/_content-container.scss
+++ b/src/styles/components/_content-container.scss
@@ -66,7 +66,14 @@
   .main-content {
     flex-direction: column;
   }
-  .item-page-container img {
-    width: 60%;
+  .item-page-container {
+    &__img {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
+    &__text {
+      margin: 0 0 2rem;
+      text-align: left;
+    }
   }
 }
