--- a/src/styles/components/_homepage-layout.scss
+++ b/src/styles/components/_homepage-layout.scss
@@ -38,7 +38,8 @@
     word-break: break-all;
   }
   @media (max-width: $desktop-breakpoint) {
-    margin: 0;
+    margin: 0 0 3rem;
+    box-shadow: 1rem 1rem 2rem rgba(0, 0, 0, 0.1);
     flex: none;
     width: 60%;
     &__img {
